Task2_KubeAdv/crm-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-crm-service
spec:
  selector:
    app: demo-crm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
